INCLUDE_DIRECTORIES(${CAMSENSE_SOURCE_DIR}/src/base)
INCLUDE_DIRECTORIES(${CAMSENSE_SOURCE_DIR}/src/toolkit)
LINK_DIRECTORIES(${CAMSENSE_SOURCE_DIR}/src/base)
LINK_DIRECTORIES(${CAMSENSE_SOURCE_DIR}/src/toolkit)

INCLUDE_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}/dep
    ${PROJECT_SOURCE_DIR}/dep/eigen3
	)
	
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)

	
ADD_SUBDIRECTORY(base)


ADD_EXECUTABLE (sdk_demo sdk_demo.cpp)
TARGET_LINK_LIBRARIES (sdk_demo lidar)



ADD_EXECUTABLE (sdk_scanData sdk_scanData.cpp)
TARGET_LINK_LIBRARIES (sdk_scanData lidar)


